<resources>
    <string name="app_name">M Player</string>
    <string name="home_btn">Home</string>
    <string name="my_playlist_btn">My Playlists</string>
    <string name="creator_name">Dilshodbek</string>
    <string name="creator_username">\@Dilshodbekdev</string>
    <string name="creator_contact">Creator contact</string>
    <string name="creator_avatar">Creator Avatar</string>
    <string name="song_title">Song:</string>
    <string name="song_name">Uptown Funk</string>
    <string name="play_btn">Play Button</string>
    <string name="playlist_added_text">Added to Playlist</string>
    <string name="created_at">39 minutes ago</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
    <string name="recently_played">Recently Played</string>
    <string name="see_all">See All</string>
    <string name="artists">Artists</string>
    <string name="most_played">Most Played</string>
</resources>