<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="25dp"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/img_creator_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/creator_avatar"
                    android:src="@drawable/noobify_splash_screen_icon" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="30"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_creator_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/creator_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_creator_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/creator_username" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_song_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/song_name" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>





